<resources>
    <string name="app_name">Taller</string>
    <string name="titulo">Ingrese su Información Básica</string>
    <string name="saludar">Enviar</string>
    <string name="parte_saludo">Hola</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="parte_saludo2">Bienvenido a esta aplicación!!!</string>
    <string name="parte_saludo3">Usted tiene</string>
    <string name="parte_saludo4">Años</string>
    <string name="parte_saludo5">y su Sexo es</string>
    <string name="error_1">Digite el Nombre</string>
    <string name="error_2">Digite el Apellido</string>
    <string name="error_3">Digite el Segundo Nombre</string>
    <string name="error_4">Digite el Segundo Apellido</string>
    <string name="error_5">Digite la Edad</string>
    <string name="error_6">Digite el Sexo</string>
    <string name="primernombre">Primer Nombre</string>
    <string name="segundonombre">Segundo Nombre</string>
    <string name="primerapellido">Primer Apellido</string>
    <string name="segundoapellido">Segundo Apellido</string>
    <string name="borrar">Borrar</string>
    <string name="edad">Edad</string>
    <string name="sexo">Sexo</string>
</resources>
